# shishakai

./: .gitignore  README.md  pyproject.toml  pytest.ini  setup.cfg
shishakai/: __init__.py  base.py  moviewalker.py
tests/: test_init.py  test_moviewalker.py
