[tool.poetry]
name = "shishakai"
version = "0.0.1"
description = "Gather schedules for movie preview events"
authors = ["Takahiro Yano <speg03@gmail.com>"]
license = "MIT"
readme = "README.md"

homepage = "https://github.com/speg03/shishakai"
repository = "https://github.com/speg03/shishakai"

keywords = ["web", "scraping", "movie"]
classifiers = [
    "Development Status :: 1 - Planning",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries :: Python Modules"
]

[tool.poetry.dependencies]
python = "^3.5"
importlib-metadata = {version = "^1.5.0", python = "<3.8"}

[tool.poetry.dev-dependencies]
pytest = "^5.3"
pytest-cov = "^2.8"
flake8 = "^3.7"
isort = "^4.3"
jedi = "^0.16.0"
black = {version = "^19.10b0", python = "^3.6"}

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
